[gd_scene load_steps=2 format=3 uid="uid://6b8rn3kh3dxm"]

[ext_resource type="Script" path="res://Scripts/Inventory/inventory_ui.gd" id="1_gxek2"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gxek2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 500.0
offset_bottom = 100.0

[node name="Slot1" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Slot1"]
layout_mode = 2
offset_right = 96.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="HBoxContainer/Slot1"]
layout_mode = 2
offset_right = 51.0
offset_bottom = 48.0

[node name="Slot2" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Slot2"]
layout_mode = 2
offset_right = 97.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="HBoxContainer/Slot2"]
layout_mode = 2
offset_right = 49.0
offset_bottom = 48.0

[node name="Slot3" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Slot3"]
layout_mode = 2
offset_right = 97.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="HBoxContainer/Slot3"]
layout_mode = 2
offset_right = 47.0
offset_bottom = 48.0

[node name="Weapon" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Weapon"]
layout_mode = 0
offset_right = 98.0
offset_bottom = 100.0

[node name="Candles" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Candles"]
layout_mode = 0
offset_right = 97.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="HBoxContainer/Candles"]
layout_mode = 0
offset_right = 49.0
offset_bottom = 48.0

[node name="CheatCodes" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CheatCodes"]
offset_right = 127.0
offset_bottom = 104.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="GiveWeapon" type="Button" parent="CheatCodes/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Give Weapon"

[node name="MaxItems" type="Button" parent="CheatCodes/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Max Items"

[node name="ClearInventory" type="Button" parent="CheatCodes/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Clear Inventory"

[connection signal="pressed" from="CheatCodes/VBoxContainer/GiveWeapon" to="." method="_on_give_weapon_pressed"]
[connection signal="pressed" from="CheatCodes/VBoxContainer/MaxItems" to="." method="_on_max_items_pressed"]
[connection signal="pressed" from="CheatCodes/VBoxContainer/ClearInventory" to="." method="_on_clear_inventory_pressed"]
